--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -863,7 +863,7 @@ body {
 	font-family: var(--body-font);
 	font-size: 16px;
 	font-weight: 500;
-	color: rgba(255, 255, 255, .3);
+	color: rgba(255, 255, 255, .5);
 
 	transition-duration: .5s;
 	transition-delay: .1s;
@@ -1084,16 +1084,26 @@ label[for=checkbox] {
 	transition-delay: .1s;
 }
 
-.inactive {
-	background-color: #C84B31;
+.button-container {
+	position: relative;
 	width: 100%;
 	height: 41px;
+}
+
+.disabled-layer {
+	position: absolute;
+
+	width: 100%;
+	height: 100%;
+
+	background-color: rgba(0, 0, 0, 0.4);
+	z-index: 5;
 }
 
 #btn-send-message {
 	position: relative;
 	width: 100%;
-	height: 41px;
+	height: 100%;
 
 	border: 2px solid rgba(255, 255, 255, .3);
 	background-color: rgba(6, 70, 99, .5);
@@ -1124,7 +1134,7 @@ label[for=checkbox] {
 	font-size: 14px;
 	font-weight: 300;
 	letter-spacing: 0.02em;
-	color: rgba(255, 255, 255, .3);
+	color: rgba(255, 255, 255, .5);
 
 	transition-duration: .5s;
 	transition-delay: .1s;
@@ -1329,7 +1339,7 @@ label[for=checkbox] {
 		flex-wrap: nowrap;
 	}
 
-	#btn-send-message {
+	.button-container {
 		max-width: 240px;
 	}
 }
